# Quadratic_Programming

./: README.md
QPsolve/: QPsolve.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  qptrajectory.cpp  qptrajectory.h
qpc/: CMakeLists.txt  main.cpp
qpc/include/: qptrajectory.cpp  qptrajectory.h
qptrajectory_ros/: CMakeLists.txt  package.xml
qptrajectory_ros/include/: qptrajectory.cpp  qptrajectory.h
qptrajectory_ros/src/: qptest.cpp
